refactor : major refactoring to reduce code smell throughout service codes